--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 
-<html>
+<html lang="tr">
   <head>
     <meta charset="utf-8" />
-
+<
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
